# boiler-room-old

./: .env  .gitignore  Cargo.toml  Makefile  example.env  justfile  notes.txt  rustfmt.toml
backend/: Cargo.toml  example.env
backend/migrations/: 00_authentication.sql
backend/src/: db.rs  error.rs  main.rs  state.rs  test.rs  traits.rs
backend/src/auth/: hash.rs  login.rs  session.rs
backend/src/routes/: mod.rs  utils.rs
backend/src/routes/api/: doc_body.txt  mod.rs
backend/src/routes/api/admin/: doc_body.txt  mod.rs  sessions.rs
backend/src/routes/api/admin/users/: mod.rs
backend/src/routes/api/admin/users/user/: impersonate.rs  mod.rs  password.rs
backend/src/routes/api/user/: mod.rs  password.rs  sessions.rs
frontend/: Cargo.toml  index.html  index.html.etag  style.css
frontend/src/: controller.rs  lib.rs  login.rs  model.rs
frontend/src/routes/: admin.rs  mod.rs  root.rs  settings.rs  user.rs
frontend/src/routes/admin/: mod.rs  users.rs
frontend/src/view/: mod.rs
migrations/: 00_authentication.sql
shared_types/: Cargo.toml
shared_types/src/: lib.rs
src/: error.rs  main.rs  state.rs  test.rs  traits.rs
src/auth/: hash.rs  login.rs  mod.rs  session.rs
src/db/: mod.rs  users.rs
src/routes/: mod.rs  utils.rs
src/routes/api/: doc_body.txt  mod.rs
src/routes/api/admin/: doc_body.txt  mod.rs  sessions.rs  users.rs
src/routes/api/admin/users/: mod.rs
src/routes/api/admin/users/user/: impersonate.rs  mod.rs  password.rs
src/routes/api/user/: mod.rs  password.rs  sessions.rs
