[package]
name = "boiler-room"
version = "0.1.0"
edition = "2018"

[features]
lock_users = []
specific_login_errors = []

[dependencies]
# Configuration
dotenv = "0.15"
# The base web serving
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "*", features = ["derive"] } # We let chrono decide the exact version
serde_json = "1.0"
serde_urlencoded = "0.7"
# Database interaction
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "migrate", "macros", "chrono", "postgres"] }
chrono = { version = "0.4", features = ["serde"] }
# Password hashing and verification
argon2 = "0.2"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
nanoid = "0.4"
# Templating engine
askama = "0.10"
