[package]
version = "0.1.0"
name = "frontend"
authors = ["sidju <contact@sidju.se>"]
license = "MIT"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
shared_types = { path = "../shared_types" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
